--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body
 {
    background-color: #FFFFFF;
-   background: url(landingpage-gallery-visine.jpg)no-repeat left top fixed;
+   background: url(https://raw.githubusercontent.com/nader199670/redirect/master/landingpage-gallery-visine.jpg)no-repeat left top fixed;
    -webkit-background-size:cover;
    -moz-background-size:cover;
    -o-background-size:cover;
